--- a/download-ipa/index0.html
+++ b/download-ipa/index0.html
@@ -14,7 +14,7 @@
     </div>
     <script src="./script.js"></script>
     <script>
-        var myfunc = () => { downloadAll(arr0, document.querySelector('.body .downloads'), true); }
+        var myfunc = () => { downloadAll(arr0, document.querySelector('.body .downloads'), false); }
     </script>
 </body>
 
