--- a/download-ipa/index0.html
+++ b/download-ipa/index0.html
@@ -15,6 +15,7 @@
     <script src="./script.js"></script>
     <script>
         var myfunc = () => { downloadAll(arr0, document.querySelector('.body .downloads'), false,true); }
+        var myfunc0 = ()=>{downloadAll0(arr0)}
     </script>
 </body>
 
