--- a/download-ipa/index0.html
+++ b/download-ipa/index0.html
@@ -13,9 +13,9 @@
         <button onclick="myfunc();">전부 다운로드</button>
     </div>
     <script src="./script.js"></script>
-    <script>
+    <script><!-- 
         var myfunc = () => { downloadAll(arr0, document.querySelector('.body .downloads'), false,true); }
-        var myfunc0 = ()=>{downloadAll0(arr0)}
+        var myfunc0 = ()=>{downloadAll0(arr0)} -->
     </script>
 </body>
 
